css/custom/app.css
/* ... */
#genericmenu, #adm_submenus {
	padding-inline: 1em;
	row-gap: 1em;

	@media screen and (max-width: 991px) {
		.navbar-brand {
			display: inline-flex;
		}
	}
}
a.hide_popup {
	font-weight: 900 !important;
	padding-inline: 0;
}
#genericNavbar,
#adm_submenus {
	.navbar-nav {
		align-items: center;
		display: flex;
		gap: .5em;
		user-select: none;
	}
	.nav-item > .nav-link {
		align-items: center;
		background: var(--dropmenu-a1-bg);
		border-color: var(--dropmenu-a1-border-color);
		border-radius: var(--dropmenu-a1-border-radius);
		border-style: var(--dropmenu-a1-border-style);
		border-width: var(--dropmenu-a1-border-width);
		box-shadow: var(--dropmenu-a1-box-shadow);
		color: var(--dropmenu-a1-color);
		display: flex;
		font-family: var(--dropmenu-a1-font-family);
		font-size: var(--dropmenu-a1-font-size);
		font-weight: var(--dropmenu-a1-font-weight);
		gap: .5em;
		min-height: var(--dropmenu-a1-height);
		padding: .2em .75em;
		text-decoration: var(--dropmenu-a1-text-decoration);
		text-shadow: var(--dropmenu-a1-text-shadow);

		&:hover {
			background: var(--dropmenu-a1-bg_hover);
			border-color: var(--dropmenu-a1-border-color_hover);
			border-width: var(--dropmenu-a1-border-width_hover);
			box-shadow: var(--dropmenu-a1-box-shadow_hover);
			color: var(--dropmenu-a1-color_hover);
			font-weight: var(--dropmenu-a1-font-weight_hover);
			text-decoration: var(--dropmenu-a1-text-decoration_hover);
			text-shadow: var(--dropmenu-a1-text-shadow_hover);
		}
		&:focus {
			background: var(--dropmenu-a1-bg_focus);
			border-color: var(--dropmenu-a1-border-color_focus);
			border-width: var(--dropmenu-a1-border-width_focus);
			box-shadow: var(--dropmenu-a1-box-shadow_focus);
			color: var(--dropmenu-a1-color_focus);
			font-weight: var(--dropmenu-a1-font-weight_focus);
			text-decoration: var(--dropmenu-a1-text-decoration_focus);
			text-shadow: var(--dropmenu-a1-text-shadow_focus);
		}
		&:focus-visible {
			outline: var(--dropmenu-a1-outline);
			outline-offset: var(--dropmenu-a1-outline-offset);
		}
		&.active {
			background: var(--dropmenu-a1-bg_active);
			border-color: var(--dropmenu-a1-border-color_active);
			border-width: var(--dropmenu-a1-border-width_active);
			box-shadow: var(--dropmenu-a1-box-shadow_active);
			color: var(--dropmenu-a1-color_active);
			font-weight: var(--dropmenu-a1-font-weight_active);
			text-decoration: var(--dropmenu-a1-text-decoration_active);
			text-shadow: var(--dropmenu-a1-text-shadow_active);
		}
	}
	.dropdown-menu {
		background: var(--dropmenu-child-bg);
		border-color: var(--dropmenu-child-border-color);
		border-radius: var(--dropmenu-child-border-radius);
		border-style: var(--dropmenu-child-border-style);
		border-width: var(--dropmenu-child-border-width);
		box-shadow: var(--dropmenu-child-box-shadow);
		flex-direction: column;
		min-width: var(--dropmenu-child-width);
		padding: .25em;
		position: absolute;
		transition: all ease-in-out 500ms;
		z-index: 4;

		&.show {
			display: flex;
		}
	}
	li > .dropdown-item {
		align-items: center;
		background: var(--dropmenu-an-bg);
		border-color: var(--dropmenu-an-border-color);
		border-radius: var(--dropmenu-an-border-radius);
		border-style: var(--dropmenu-an-border-style);
		border-width: var(--dropmenu-an-border-width);
		color: var(--dropmenu-an-color);
		display: flex;
		font-family: var(--dropmenu-an-font-family);
		font-size: var(--dropmenu-an-font-size);
		font-weight: var(--dropmenu-an-font-weight);
		gap: .2em .5em;
		min-height: var(--dropmenu-an-height);
		padding-block: .2em;
		padding-inline: .75em;
		text-decoration: var(--dropmenu-an-text-decoration);
		text-shadow: var(--dropmenu-an-text-shadow);

		&:hover {
			background: var(--dropmenu-an-bg_hover);
			border-color: var(--dropmenu-an-border-color_hover);
			border-width: var(--dropmenu-an-border-width_hover);
			color: var(--dropmenu-an-color_hover);
			font-weight: var(--dropmenu-an-font-weight_hover);
			text-decoration: var(--dropmenu-an-text-decoration_hover);
			text-shadow: var(--dropmenu-an-text-shadow_hover);
		}
		&:focus {
			background: var(--dropmenu-an-bg_focus);
			border-color: var(--dropmenu-an-border-color_focus);
			border-width: var(--dropmenu-an-border-width_focus);
			color: var(--dropmenu-an-color_focus);
			font-weight: var(--dropmenu-an-font-weight_focus);
			text-decoration: var(--dropmenu-an-text-decoration_focus);
			text-shadow: var(--dropmenu-an-text-shadow_focus);
		}
		&:focus-visible {
			outline: var(--dropmenu-an-outline);
			outline-offset: var(--dropmenu-an-outline-offset);
		}
		&:is(.active, .chosen) {
			background: var(--dropmenu-an-bg_active);
			border-color: var(--dropmenu-an-border-color_active);
			border-width: var(--dropmenu-an-border-width_active);
			color: var(--dropmenu-an-color_active);
			font-weight: var(--dropmenu-an-font-weight_active);
			text-decoration: var(--dropmenu-an-text-decoration_active);
			text-shadow: var(--dropmenu-an-text-shadow_active);

			&:hover {
				font-weight: var(--dropmenu-an-font-weight_active);
			}
		}
	}
	@media (max-width: 991px) {
		.nav-item {
			width: 100%;
		}
		.dropdown-menu.show {
			position: static;
		}
	}
}
/* ... */

